cosmetic: eliminate some code smells