@@ -29,9 +29,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 @ExtendWith(OsgiContextExtension.class)
 class OsgiContextMemberSuperClassTest extends OsgiContextMemberTest {
 
+    @Override
     @Test
     void testSimpleService() {
-        context.registerService(Integer.class, new Integer(5));
+        context.registerService(Integer.class, Integer.valueOf(5));
 
         Integer service = context.getService(Integer.class);
         assertEquals((Integer)5, service);
